<resources>
    <string name="app_name">AndroidChatApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subjects">Assuntos</string>
    <string name="subscribed">Inscritos</string>
    <string name="unsubscribed">Não Inscritos</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="sign_up">Registrar-se</string>
    <string name="name">Nome</string>
    <string name="sign_up_yourself">Registre-se</string>
    <string name="register">Registrar</string>
    <string name="register_account_error">Erro ao registrar conta.</string>
    <string name="register_account_success">Sucesso ao registrar conta.</string>
    <string name="invalid_email">Email inválido</string>
    <string name="email_already_used">Email já em uso</string>
    <string name="loading">Carregando</string>
    <string name="fill_all_fields">Preencha todos os campos.</string>
    <string name="user_not_found">Usuário não encontrado.</string>
    <string name="sign_in_error">Erro ao logar no sistema</string>
    <string name="shared_preferences">sharedPreferences</string>
    <string name="current_email_key">current_email</string>
    <string name="logout">Sair</string>
    <string name="type_here">Digite aqui...</string>
    <string name="add_new_subject">Adicione um novo assunto</string>
    <string name="insert_subject_name">Insira o nome do assunto</string>
    <string name="add_subject_error">Erro ao inserir assunto.</string>
    <string name="add_subject_success">Assunto inserido com sucesso</string>
    <string name="add">Adicionar</string>
    <string name="subject">Assunto</string>
    <string name="subject_ask_action">O que deseja fazer em relação a esse assunto?</string>
    <string name="subscribe">Inscrever</string>
    <string name="delete">Excluir</string>
    <string name="subscribed_subject">Inscrito no assunto</string>
    <string name="subscribe_error">Erro ao se inscrever no assunto</string>
    <string name="delete_subject_error">Erro ao deletar assunto</string>
    <string name="deleted">excluído</string>
    <string name="no_subject_to_subscribe">Não há nenhum assunto para se inscrever</string>
    <string name="no_subscribed_subject">Nenhum assunto inscrito</string>
    <string name="add_subject">Adicionar Assunto</string>
    <string name="user_name_key">user_name</string>
    <string name="selected_subject_key">selected_subject</string>
    <string name="delete_all_messages">Apagar mensagens</string>
    <string name="see_profile">Ver Perfil</string>
    <string name="close">Fechar</string>
    <string name="exit_subject">Cancelar Inscrição</string>
    <string name="delete_subject">Excluir assunto</string>
    <string name="deleted_subject">Assunto deletado</string>
    <string name="cancelled_subscription">Inscrição Cancelada</string>
    <string name="subscribers_list">Lista de Inscritos</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="see_subscribers">Ver Inscritos</string>
    <string name="timeout_warning">Falha de conexão. No entanto, esta operação será sincronizada com o banco de dados
        assim que a conexão for estabelecida.
    </string>
</resources>
