<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.authentication.SignUpFragment">
    <data>
        <import type="com.example.iurymiguel.androidchatapp.views.authentication.SignUpFragment"/>
        <variable name="fragment" type="SignUpFragment"/>
    </data>

    <ScrollView
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">


            <EditText
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@drawable/custom_edit_text"
                    android:id="@+id/editEmail"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textEmailLabel"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"/>
            <EditText
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@drawable/custom_edit_text"
                    android:id="@+id/editPassword"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textPasswordLabel"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"/>
            <TextView
                    android:textColor="@color/white"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textEmailLabel" app:layout_constraintStart_toStartOf="@+id/editEmail"
                    app:layout_constraintTop_toBottomOf="@+id/editName" android:layout_marginTop="24dp"/>
            <TextView
                    android:textColor="@color/white"
                    android:text="@string/sign_up_yourself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textAppName" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"/>
            <TextView
                    android:textColor="@color/white"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPasswordLabel"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editEmail"
                    app:layout_constraintStart_toStartOf="@+id/editPassword"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/guideline"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.15328467"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/guideline2"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.85"/>
            <Button
                    android:text="@string/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSignUp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginTop="40dp"
                    android:onClick="@{() -> fragment.registerUser()}"
                    app:layout_constraintTop_toBottomOf="@+id/editPassword"/>
            <TextView
                    android:textColor="@color/white"
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textNameLabel" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textAppName"
                    app:layout_constraintStart_toStartOf="@+id/editName"/>
            <EditText
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/custom_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editName" app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textNameLabel"
            />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>

